# longancalc

./: .gitignore  LICENSE  README.md
code/: main.cpp  platformio.ini
code/console/: CMakeLists.txt  calc_colors.h  computer.cpp  computer.h  main.cpp  ncfunctions.cpp  ncfunctions.h  print_calc.cpp  print_calc.h
code/src/: calculator.h  constants.h  init_result.h  interface.h  lcd_colors.h  main.cpp  mcu.cpp  mcu.h  uart.h
code/src/lcd/: oledfont.h
docs/: links.md  linux-toolchain.md  rv-link.md  sprintf-float.md  windows-toolchain.md
hardware/case/: OpenRPNCalc.scad  OpenRPNCalc.stl  OpenRPNCalcV6.1.stl  WD6_OpenRPNCalcV6.1.gcode  WD6_top_half.gcode  top_half.stl
hardware/case/v7-auguga/: CalcV6.gcode  CalcV7-prg-auguga.gcode  CalcV7-prg-auguga.stl  OpenRPNCalc.scad  OpenRPNCalc.stl  OpenRPNCalcAuguta.scad  WD6_kaas.gcode  kaas.stl
ncmousew/: CMakeLists.txt  button.h  calculator.h  computer.cpp  computer.h  constants.h  interface.h  main.cpp  ncfunctions.cpp  ncfunctions.h
step1/: platformio.ini
step1/src/: main.cpp
step2/src/: main.cpp
step3/: platformio.ini
step3/src/: main.cpp  uart.cpp  uart.h
step4/: platformio.ini  readme.md
step4/src/: main.cpp
step5/: platformio.ini  readme.md
step5/src/: main.cpp  uart.cpp  uart.h
step6/: platformio.ini  readme.md
step6/src/: main.cpp  uart.cpp  uart.h
step6/src/lcd/: lcd.c
step6b/: platformio.ini  readme.md
step6b/src/: main.cpp  uart.cpp
step6b/src/lcd/: bmp.h  lcd.c  lcd.h
step7/src/: CMakeLists.txt  main.cpp
step8/src/: main.cpp
step9/src/: build.bat  main.cpp
